semester2/object_oriented_programming/tps/.svn/pristine/8e/8ec6e138dcb7e27ee16a9efb93db2f1bcd11c5ea.svn-base
allumettes/StrategieExpert.java:19: error: cannot find symbol
			return Generateur.nb_Aleatoire(jeu);
			       ^
  symbol:   variable Generateur
  location: class StrategieExpert
1 error
